Saving report in db